[package]
name = "wiggle"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
edn-rs = { version = "0.17.5", features = ["json"] }
git2 = "0.18.3"
hashbrown = { version = "0.14.5", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
url = { version = "2.5.0", features = ["serde"] }
